Created new and edit forms and partials

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,18 +1,19 @@
-<h1>All Recipes</h1>
-<hr />
+<%= render 'shared/page_title', title: "All recipes" %>
 
 <% @recipes.each do |r| %>
   <div class="row">
     <div class="col-md-2">
       <section class="chef_info center">
-
+        <%= gravatar_for r.chef, size: 100 %>
+        <h5>Chef: <%= r.chef.chefname %></h5>
       </section>
     </div>
     <div class="col-lg-8 well">
-      <h4><%= link_to r.name, " " %></h4>
+      <h4><%= link_to r.name, recipe_path(r) %></h4>
       <p><%= r.summary %></p>
       <p>
         <span class="quiet"><small><%= time_ago_in_words(r.created_at) %></small></span>
     </div>
   </div>
+  <hr />
 <% end %>
