--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -59,4 +59,29 @@ h2 {
   margin-top: 25px;
   color: #777;
   padding-top: 8px;
+  position: absolute;
+  bottom: 0;
+}
+
+.chef_info {
+  margin-top: 10px;
+}
+
+.gravatar {
+  border-radius: 5px;
+}
+
+.well {
+  background-color: #ededed;
+}
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #d2d2d2;
+  border-radius: 5px;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+input {
+  height: auto !important;
 }
