--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -8,7 +8,7 @@
         <h5>Chef: <%= r.chef.chefname %></h5>
       </section>
     </div>
-    <div class="col-lg-8 well">
+    <div class="col-md-10 well pull-right">
       <h4><%= link_to r.name, recipe_path(r) %></h4>
       <p><%= r.summary %></p>
       <p>
