--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -9,10 +9,11 @@
   </div>
 
   <div class="col-md-8">
+    <%= link_to "Edit recipe", edit_recipe_path(@recipe.id), class: "btn btn-success btn-small pull-right" %>
     <h3><%= @recipe.summary %></h3>
-
     <p>
       <%= @recipe.description %>
     </p>
   </div>
 </div>
+<%= link_to "Return to recipes", recipes_path, class: "btn btn-warning btn-small" %>
