--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -59,8 +59,6 @@ h2 {
   margin-top: 25px;
   color: #777;
   padding-top: 8px;
-  position: absolute;
-  bottom: 0;
 }
 
 .chef_info {
@@ -84,4 +82,15 @@ input, textarea, select, .uneditable-input {
 
 input {
   height: auto !important;
+}
+
+span.picture {
+  margin-top: 10px;
+  input {
+    border: 0;
+  }
+}
+
+.show_recipe {
+  margin: 20px 20px 20px 10px;
 }
