--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -29,6 +29,11 @@
           <%= f.text_area :description, rows: 10, class: 'form-control' %>
         </div>
       </div>
+
+      <span class="picture">
+        <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
+      </span>
+
       <div class="form-group">
         <div class="col-sm-3 col-sm-offset-2">
           <%= f.submit(@recipe.new_record? ? 'Create Recipe' : 'Update Recipe', class: 'btn btn-success') %>
@@ -37,3 +42,12 @@
       <% end %>
   </div>
 </div>
+
+<script type="text/javascript">
+  $('#recipe_picture').bind('change', function(){
+    var size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('Maximum file size is 5MB. Please choose a smaller file.');
+    }
+  });
+</script>
