--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -9,9 +9,13 @@
   <div class="col-md-8">
     <%= link_to "Edit recipe", edit_recipe_path(@recipe.id), class: "btn btn-success btn-small pull-right" %>
     <h3><%= @recipe.summary %></h3>
-    <p>
-      <%= @recipe.description %>
-    </p>
+    <div class="show_recipe">
+      <%= image_tag(@recipe.picture.url, class: "gravatar") if @recipe.picture? %>
+    </div>
+    <div class="well">
+      <p><strong>Steps:</strong></p>
+      <%= simple_format(@recipe.description) %>
+    </div>
   </div>
 </div>
 <%= link_to "Return to recipes", recipes_path, class: "btn btn-warning btn-small" %>
