--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,9 +56,23 @@ h2 {
 
 .footer {
   border-top: 1px solid #eaeaea;
-  margin-top: 25px;
+  margin-top: 30px;
   color: #777;
   padding-top: 8px;
+  // width: 100%;
+	// height: 40px;
+  // position: absolute;
+  // bottom: 0;
+  // left: 0;
+}
+
+.clear {
+  clear: both;
+}
+
+#wrapper {
+	min-height:100%;
+	position:relative;
 }
 
 .chef_info {
@@ -93,4 +107,8 @@ span.picture {
 
 .show_recipe {
   margin: 20px 20px 20px 10px;
+}
+
+.btn {
+  margin: 5px;
 }
