--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,10 @@
 <body>
   <%= render 'layouts/navigation' %>
 
-<div class="container">
+<div class="container" id="wrapper">
   <%= render 'layouts/messages' %>
   <%= yield %>
+  <div class="clear"></div>
   <%= render 'layouts/footer' %>
 </div>
 </body>
