--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -7,7 +7,10 @@
   </div>
 
   <div class="col-md-8">
-    <%= link_to "Edit recipe", edit_recipe_path(@recipe.id), class: "btn btn-success btn-small pull-right" %>
+    <% if logged_in? and @recipe.chef == current_user %>
+      <%= link_to "Delete recipe", destroy_recipe_path(@recipe.id), class: "btn btn-danger btn-small pull-right" %>
+      <%= link_to "Edit recipe", edit_recipe_path(@recipe.id), class: "btn btn-success btn-small pull-right" %>
+    <% end %>
     <h3><%= @recipe.summary %></h3>
     <div class="show_recipe">
       <%= image_tag(@recipe.picture.url, class: "gravatar") if @recipe.picture? %>
